[OPIK-6849] address PR review comments
- Migration ends with a trailing empty line (per opik-backend migrations guideline)
- Use getFirst() / getLast() instead of index access in the last_updated_at window test

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>